Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71295

Undefined reference to content::MediaStreamDeviceObserver::AddStream

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.3, 5.12.0 Beta 4
    • 5.11.2
    • WebEngine
    • None
    • Ubuntu 14.04.5 LTS
    • Linux/X11
    • 9f4aba186947a505293d2414e40a5080a2c52861 (qt/qtwebengine-chromium/65-based)

      1) Qt fails to build with following errors:

      [14877/14877] touch QtWebEngineCore.stamp
      /home/appimage/appimage-workspace/deps-build/ext_qt/ext_qt-prefix/src/ext_qt-build/qtwebengine/src/core/release/obj/content/renderer/librenderer.a(pepper_media_device_manager.o):pepper_media_device_manager.cc:function content::PepperMediaDeviceManager::OnDeviceOpened(int, bool, std::string const&, content::MediaStreamDevice const&): error: undefined reference to 'content::MediaStreamDeviceObserver::AddStream(std::string const&, content::MediaStreamDevice const&)'
      collect2: error: ld returned 1 exit status
      make[8]: *** [../../lib/libQt5WebEngineCore.so.5.11.2] Error 1

      2) We've got CI system that builds Qt and the log can be seen here

      https://binary-factory.kde.org/job/KMyMoney_Nightly_Appimage_Dependency_Build/34/consoleText

      3) I build Qt by ExternalProject_Add (see attachment for exact configuration)

      Whole build system can be seen here

      https://cgit.kde.org/kmymoney.git/tree/3rdparty

      and here

      https://cgit.kde.org/kmymoney.git/tree/packaging/linux/appimage

        For Gerrit Dashboard: QTBUG-71295
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            wojnilowicz wojnilowicz
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes