FIXUP: Building with plugins but webrtc disabled

Fixes: QTBUG-71295
Change-Id: Ia15d1ef8c7d84c53dcd52876e08fb8a480212c76
Reviewed-by: Michal Klocek <michal.klocek@qt.io>