chromium/content/renderer/pepper/pepper_media_device_manager.cc
@@ -14,13 +14,16 @@
 #include "content/public/common/content_features.h"
 #include "content/public/common/service_names.mojom.h"
 #include "content/renderer/media/media_devices_event_dispatcher.h"
-#include "content/renderer/media/media_stream_device_observer.h"
 #include "content/renderer/pepper/renderer_ppapi_host_impl.h"
 #include "content/renderer/render_frame_impl.h"
 #include "media/media_features.h"
 #include "ppapi/shared_impl/ppb_device_ref_shared.h"
 #include "services/service_manager/public/cpp/connector.h"
 #include "services/service_manager/public/cpp/interface_provider.h"
+
+#if BUILDFLAG(ENABLE_WEBRTC)
+#include "content/renderer/media/stream/media_stream_device_observer.h"
+#endif
 
 namespace content {
 
@@ -235,8 +238,10 @@ void PepperMediaDeviceManager::OnDeviceOpened(int request_id,
     return;
   }
 
+#if BUILDFLAG(ENABLE_WEBRTC)
   if (success)
     GetMediaStreamDeviceObserver()->AddStream(label, device);
+#endif
 
   OpenDeviceCallback callback = iter->second;
   open_callbacks_.erase(iter);
